# Zenith

./: .gitignore  CLAUDE.md  JARVIS_PRD.md  MEMORY.md  README.md  SECURITY.md  SETUP-APPS.md  SETUP-DISCORD.md  SETUP-GOOGLE.md  SETUP-NOTION.md  SETUP-TAURI.md  SETUP-TELEGRAM.md  SETUP-WAKEWORD.md  SETUP-WEBSEARCH.md  TODO.md
backend/: .env.example  activity_log.py  app_launcher.py  apps.example.json  auth.py  chat_core.py  claude_service.py  conftest.py  copy_factory.py  discord_service.py  google_auth.py  google_service.py  main.py  memory_service.py  news_service.py  notion_service.py  proactivity_service.py  rate_limiter.py  requirements.txt  secure_files.py  stt_service.py  telegram_service.py  test_app_launcher.py  test_auth_gate.py  test_briefing_fresh.py  test_confirm_flow.py  test_copy_factory.py  test_cors.py  test_discord_tools.py  test_google_tools.py  test_health_route.py  test_log_scrub.py  test_memory_persistence.py  test_news.py  test_notion.py  test_proactivity.py  test_prompt_injection.py  test_rate_limiter.py  test_read_url.py  test_secure_files.py  (+21 more)
backend/.impeccable/: hook.cache.json
frontend/: .env.example  .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ActivityLog.tsx  AmbientBackground.tsx  BootScreen.tsx  CalendarPanel.tsx  ClientsView.tsx  IconNav.tsx  (+33 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: backend.rs  lib.rs  watcher.rs
(+52 files in other folders)
