[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2.4.2"

# WebView2 permission hook: grant the microphone so the voice loop's getUserMedia works
# in the bundled WebView (WebView2 otherwise denies it silently). Pinned to the version
# Tauri already resolves transitively so there is no duplicate.
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"

# Global push-to-talk hotkey (Ctrl+Alt+Z) — the Rust host owns the OS-global shortcut.
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2"
